--- a/home_work_4/.env
+++ b/home_work_4/.env
@@ -1,7 +1,7 @@
 PROJECT_NAME=ylab_hw_3
 
 # JWT SETTINGS
-JWT_SECRET_KEY=foo
+JWT_SECRET_KEY=SOME_KEY
 JWT_ALGORITHM=HS256
 
 # Redis
@@ -14,5 +14,3 @@ POSTGRES_PORT=5432
 POSTGRES_DB=ylab_hw
 POSTGRES_USER=ylab_hw
 POSTGRES_PASSWORD=ylab_hw
-
-
