--- a/home_work_4/docker-compose.yml
+++ b/home_work_4/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       context: .
       dockerfile: Dockerfile
     env_file:
-      - example.env
+      - .env
     networks:
       - ylab_network
     ports:
@@ -34,7 +34,7 @@ services:
       retries: 100
 
   ylab_postgres_db:
-    container_name: ylab_postgres_db_4
+    container_name: ylab_postgres_db
     image: postgres:latest
     volumes:
       - postgres_data:/var/lib/postgresql/data/
@@ -43,9 +43,9 @@ services:
       - POSTGRES_USER=ylab_hw
       - POSTGRES_PASSWORD=ylab_hw
     expose:
-      - 5430
+      - 5432
     ports:
-      - "5430:5430"
+      - "5432:5432"
     networks:
       - ylab_network
     healthcheck:
