--- a/home_work_4/requirements.txt
+++ b/home_work_4/requirements.txt
@@ -1,23 +1,24 @@
+﻿alembic==1.8.1
 anyio==3.6.1
 async-timeout==4.0.2
-cffi==1.15.1
+bcrypt==3.2.2
 click==8.1.3
-cryptography==37.0.4
+colorama==0.4.5
 Deprecated==1.2.13
-dnspython==2.2.1
-email-validator==1.2.1
-fastapi==0.79.0
-fastapi-jwt-auth==0.5.0
+fastapi==0.78.0
 greenlet==1.1.2
 h11==0.13.0
 idna==3.3
+isort==5.10.1
+Mako==1.2.1
+MarkupSafe==2.1.1
 packaging==21.3
-psycopg-binary==3.0.15
+passlib==1.7.4
 psycopg2-binary==2.9.3
-pycparser==2.21
 pydantic==1.9.1
-PyJWT==1.7.1
+pyjwt==2.4.0
 pyparsing==3.0.9
+python-multipart==0.0.5
 redis==4.3.4
 sniffio==1.2.0
 SQLAlchemy==1.4.39
@@ -26,5 +27,4 @@ sqlmodel==0.0.6
 starlette==0.19.1
 typing_extensions==4.3.0
 uvicorn==0.18.2
-Werkzeug==2.1.2
 wrapt==1.14.1
